style: fix mobile sidebar left overlay z-index

--- a/layout/sidebar-left.css
+++ b/layout/sidebar-left.css
@@ -4,7 +4,7 @@
    right: 0;
    bottom: 0;
    left: 0;
-   z-index: 4;
+   z-index: 2;
    background-color: #ccc;
    background-color: rgba(0,0,0,0.3);
 }
